eoloplanner-workloads.yml
# Eoloplanner K8s workloads


# Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 1
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: oscarsotosanchez/server:v1.0
---

# Weatherservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherservice
spec:
  selector:
    matchLabels:
      app: weatherservice
  replicas: 1
  template:
    metadata:
      labels:
        app: weatherservice
    spec:
      containers:
      - name: weatherservice
        image: oscarsotosanchez/weatherservice:v1.0
---

# Planner
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner
spec:
  selector:
    matchLabels:
      app: planner
  replicas: 1
  template:
    metadata:
      labels:
        app: planner
    spec:
      containers:
      - name: planner
        image: oscarsotosanchez/planner:v1.0
---


# Toposervice 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toposervice
spec:
  selector:
    matchLabels:
      app: toposervice
  replicas: 1
  template:
    metadata:
      labels:
        app: toposervice
    spec:
      containers:
      - name: toposervice
        image: oscarsotosanchez/toposervice:v1.0
---

# MySQL 
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
---

# Mongo DB
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongo
        image: mongo:4.2.12-bionic
---

# RabbitMQ
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbit
        image: rabbitmq:3-management
---
